[package]
name = "tp"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
axum = { version = "0.6", features = ["headers"] }
tokio = { version = "1.25", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["cors"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "json",
] }
jsonwebtoken = "8.2"
once_cell = "1.17"
